fixed display error on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -46,3 +46,9 @@ img {
     disabled:hover:text-white;
   }
 }
+
+section,footer{
+  overflow: hidden;
+  white-space: wrap;
+  word-break: break-word;
+}
